--- a/13-02-2022/index.html
+++ b/13-02-2022/index.html
@@ -12,7 +12,7 @@
 
     </div>
     <div style="background-color: white;">
-        <img src="./Lata-Mangenshkar-Ji.jpg" width="1000px" height="450px" style="margin-left: 250px; margin-top: 20px; " />
+        <img src="./Lata-Mangenshkar-Ji.jpg" width="1000px" height="450px" style="margin-left: 250px; margin-top: 20px;text-align:center; " />
         <p style="text-align: center;">Lata Mangeshkar Ji(1929-2022)</p>
     </div>
     <div>
