--- a/March/13-03-2022/weather.html
+++ b/March/13-03-2022/weather.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="input">
-    <input type="text" placeholder="enter your city here" id="input_field"/>
+    <input type="text" placeholder="Enter your city here" id="input_field"/>
     <button id="search_btn"><img src="./search.png"></button>
     <script src="./weather.js"></script>
     </div>
